--- a/github/package.json
+++ b/github/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.0",
+    "@react-native-community/masked-view": "^0.1.7",
+    "@react-navigation/stack": "^5.1.0",
     "axios": "^0.19.2",
     "moment": "^2.24.0",
     "react": "16.9.0",
     "react-devtools": "^4.4.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-safe-area-context": "^0.7.3",
     "react-navigation": "^4.1.1",
+    "react-navigation-stack": "react-navigation/stack",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
